@@ -260,6 +260,8 @@ int slurm_step_launch (slurm_step_ctx_t *ctx,
 	launch.cpus_allocated  = ctx->step_resp->step_layout->tasks;
 	launch.global_task_ids = ctx->step_resp->step_layout->tids;
 
+	launch.select_jobinfo  = ctx->step_resp->select_jobinfo;
+
 	launch.user_managed_io = params->user_managed_io ? 1 : 0;
 	ctx->launch_state->user_managed_io = params->user_managed_io;
 
