@@ -24,6 +24,8 @@ documents those changes that are of interest to users and admins.
     resources exclusively held by the job available to other jobs.
  -- Fix possible invalid memory reference in sched/backfill. Patch by Andriy
     Grytsenko (Massive Solutions Limited).
+ -- Add select_jobinfo to the task launch RPC. Based upon patch by Andriy
+    Grytsenko (Massive Solutions Limited).
 
 * Changes in SLURM 2.3.0.pre6
 =============================
